--- a/4-DOM-Pig-Game/index.html
+++ b/4-DOM-Pig-Game/index.html
@@ -11,6 +11,10 @@
 
     <body>
         <div class="wrapper clearfix">
+
+            <label for="win-score">Winning Score</label>
+            <input type="number" name="win-score" id="win-score">
+
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
                 <div class="player-score" id="score-0">43</div>
