--- a/7-EcmaScript2015/index.html
+++ b/7-EcmaScript2015/index.html
@@ -28,6 +28,7 @@
         <div class="box blue">I'm blue!</div>
         <div class="box orange">I'm orange!</div>
         
-        <script src="script.js"></script>
+        <!-- <script src="script.js"></script> -->
+        <script src="my-challenge-solution.js"></script>
     </body>
 </html>
