[FEAT]: Review Challeng and See How to use ES2015 / ES6 using Babel.

--- a/7-EcmaScript2015/index.html
+++ b/7-EcmaScript2015/index.html
@@ -29,6 +29,7 @@
         <div class="box orange">I'm orange!</div>
         
         <!-- <script src="script.js"></script> -->
-        <script src="my-challenge-solution.js"></script>
+        <script src="polyfill.min.js"></script>
+        <script src="my-challenge-solution-transpiled.js"></script>
     </body>
 </html>
